<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".aktivasiAkun">

    <TextView
        android:id="@+id/aktivasiAkun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Aktivasi Akun"
        android:gravity="center"
        android:paddingTop="20dp"
        app:layout_constraintTop_toTopOf="parent"/>
    
    <androidx.cardview.widget.CardView
        android:id="@+id/kotakInformasi"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="34dp"
        android:minHeight="554dp"
        android:minWidth="335dp"
        app:layout_constraintTop_toBottomOf="@+id/aktivasiAkun">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="Informasi Akun"
                android:paddingLeft="50dp"/>
            <TextView
                android:id="@+id/ketAkun"
                android:layout_width="245dp"
                android:layout_height="36dp"
                android:text="Masukkan informasi mengenai akun mobile banking Sephora Anda."
                android:paddingLeft="50dp"/>

            <EditText
                android:id="@+id/rekUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Rekening"
                android:paddingTop="40dp"/>
            <EditText
                android:id="@+id/pengguna"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/IdPengguna"
                android:paddingTop="20dp"/>
            <EditText
                android:id="@+id/katasandi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/kataSandi"
                android:paddingTop="20dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/kataSandi2"
                android:paddingTop="20dp"/>

            <Button
                android:id="@+id/aktivasiAkunDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selanjutnya"
                android:paddingTop="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>