<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="20dp"/>

    <TextView
        android:id="@+id/login2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login2"
        app:layout_constraintTop_toBottomOf="@+id/login"
        android:layout_marginTop="5dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardLogin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:minHeight="276dp"
        android:minWidth="335dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintTop_toBottomOf="@+id/login2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15dp"
            app:layout_constraintBottom_toBottomOf="@+id/edtUsername"
            app:layout_constraintTop_toBottomOf="@+id/edtUsername">

            <EditText
                android:id="@+id/edtUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_input_text"
                android:fontFamily="@font/roboto"
                android:hint="@string/username"
                android:paddingHorizontal="10dp"
                android:paddingVertical="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.125" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_input_text"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:paddingHorizontal="10dp"
                android:paddingVertical="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtUsername"
                app:layout_constraintVertical_bias="0.152" />

            <TextView
                android:id="@+id/notesPassword"
                android:layout_width="341dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginLeft="35dp"
                android:text="Password tidak memenuhi syarat"
                android:textColor="@color/red"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

            <Button
                android:id="@+id/btnMasuk"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="44dp"
                android:background="#2F82FF"
                android:enabled="false"
                android:text="@string/Masuk"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="0.9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtPassword"/>

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="335dp"
                android:layout_height="68dp"
                android:background="@drawable/bg_kotak_login"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.098">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/nameOfUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.245"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.142" />

                    <TextView
                        android:id="@+id/rekUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.245"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/nameOfUser"
                        app:layout_constraintVertical_bias="0.673" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardLogin">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="54dp"
            android:minHeight="54dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_fab_bg" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/biometric_scan" />
        </FrameLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/lupaPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="Lupa Username / Password ?"
        android:textColor="#2F82FF"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/cardLogin"
        app:layout_editor_absoluteX="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>